fix: increase nav__link contrast

--- a/src/index.css
+++ b/src/index.css
@@ -586,7 +586,7 @@ h2 {
 }
 
 .nav__link {
-  color: #909090;
+  color: #4d4d4d;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
